--- a/project 4.html
+++ b/project 4.html
@@ -3,6 +3,8 @@
 <html>
 <head>
 	<title>project 4</title>
+	
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 	<style type="text/css">
 		html,body{
@@ -17,6 +19,7 @@
 			margin-left: 50px;
 			background-color: #f1f1f1;
 			display: flex;
+			justify-content: space-between;
 
 		}
 		#umi{
@@ -144,6 +147,15 @@
 		footer i{
 			color: white;
 		}
+		/* mobile phone */
+@media only screen and (max-width: 600px) {
+    section{
+        display: block;
+    }
+    .left ,.right{
+        width: 100%;
+    }
+}
 
 
 
